# laffyhand

./: .coverage  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  Makefile  README.md  build.bat  dev.sh  laffyhand.example.yml  pyproject.toml
hooks/: commit-msg.sh
laffyhand/: __init__.py  __main__.py  config.py  main.py  server.py  ui_server.py
laffyhand/agent/: agent.py  compaction.py  context.py  llm.py  loop.py  models.py  prune.py  runtime.py  schemas.py  title.py  token_utils.py  tool_executor.py  tools.py  truncation.py
laffyhand/agent/db/: schema.py
laffyhand/agent/llm/: README.md  _bearer_auth.py  _route.py  _sse_framing.py  builders.py  facade.py  factory.py
laffyhand/agent/mcp/: __init__.py  client.py  service.py
laffyhand/agent/providers/: __init__.py  base.py  deepseek.py  openai.py  openai_compat.py  sse.py
laffyhand/agent/session/: __init__.py  converters.py  todo.py  (+5 more)
laffyhand/core/: __init__.py  _ports.py  _utils.py  agent.py  compaction.py  context.py  event_bus.py  events.py  exceptions.py  loop.py  preference.py  prune.py  runtime.py  schemas.py  title.py  token_utils.py  tool_executor.py  workspace.py
laffyhand/db/: __init__.py  converters.py  schema.py
laffyhand/gateway/: AGENTS.md  __init__.py  client.py  dispatcher.py  handlers.py  http_transport.py  protocol.py  server.py  session_converters.py  transport.py
laffyhand/llm/: AGENTS.md  __init__.py  _bearer_auth.py  _route.py  _sse_framing.py  facade.py  factory.py
laffyhand/ui/: eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.node.json  tsconfig.test.json  vite.config.ts  vitest.config.ts
tests/: conftest.py  mcp_test_server.py
tests/integration/: test_todo_e2e.py
tests/unit/: test_config.py  test_main.py
(+350 files in other folders)
