[dependency-groups]
dev = [
    "mypy>=1.15",
    "pytest>=9.0.3",
    "ruff>=0.11",
    "vulture>=2.14",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "laffyhand"
version = "0.1.0"
description = "Laffyhand -- An AI Coding Agent"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "loguru>=0.7.3",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
]
